[package]
name = "system76_ectool"
version = "0.3.8"
edition = "2021"
description = "System76 EC tool"
license = "MIT"
authors = ["Jeremy Soller <jeremy@system76.com>"]
repository = "https://github.com/system76/ec"
documentation = "https://docs.rs/system76_ectool"

[lib]
name = "ectool"

[dependencies]
clap = { version = "3.2", features = ["derive"], optional = true }
libc = { version = "0.2", optional = true }
# NOTE: Upgrading to 2.x blocked on Ubuntu shipping newer hidapi
#hidapi = { version = "1.5", default-features = false, features = ["linux-shared-hidraw"], optional = true }
redox_hwio = { version = "0.1.6", default-features = false, optional = true }
downcast-rs = { version = "1.2.0", default-features = false }

[features]
default = ["std"]
std = ["libc", "downcast-rs/std"]

[package.metadata.docs.rs]
all-features = true
